--- a/style.css
+++ b/style.css
@@ -2,30 +2,33 @@
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
+}
+
 header {
   border: 1px solid gray;
   height: 4em;
-  position:fixed;
+  position: fixed;
   width: 100%;
   overflow: hidden;
   top: 0;
-  background-color: rgb(54,157,229);
+  background-color: rgb(54, 157, 229);
 }
 
 main {
-  
   display: flex;
   justify-content: center;
   height: 50em;
   margin-top: 80px;
-  overflow: auto;
-  
 }
 
 .my-profile {
   box-shadow: 3px 3px 15px 2px rgb(180, 193, 206);
   box-sizing: border-box;
-
 }
 
 .my-profile p {
@@ -40,11 +43,9 @@ hr {
 
 .my-pic img {
   border-radius: 50%;
-  width: 60%;
+  width: 120px;
   display: block;
   margin: auto;
-
-
 }
 
 .personal-data i {
@@ -55,7 +56,6 @@ hr {
   padding: 12px;
   list-style-type: none;
   line-height: 3px;
-
 }
 
 .my-groups button,
@@ -67,22 +67,17 @@ hr {
   width: 100%;
 }
 
-
-
 .left-side {
   width: 30%;
   margin: 8px;
-
+  vertical-align: top;
 }
-
-
 
 /* Kumar's part starts here */
 
 .container {
   width: 50%;
   margin: 8px;
-
 }
 
 .middle-col {
@@ -91,14 +86,21 @@ hr {
   padding: 10px;
 
   border: 0px solid gray;
-  max-height: 30em;
+  min-height: 10em;
   box-sizing: border-box;
   clear: both;
   box-shadow: 3px 3px 15px 2px rgb(180, 193, 206);
 }
-
+.user-content {
+  display: flex;
+}
+.col-img {
+  padding: 0 10px 0 0;
+  width: 100%;
+}
 .user-content img {
   width: 100%;
+  box-sizing: border-box;
 }
 
 .middle-col input {
@@ -110,23 +112,29 @@ hr {
 .avatar img {
   width: 60px;
   float: left;
-  margin-right: 20px;
+  margin-right: 10px;
   border-radius: 50%;
 }
 
 .time {
   float: right;
   opacity: 0.5;
+  margin-top: 10px;
+}
+
+.clearfix {
+  clear: right;
 }
 
 hr {
   border: 0;
   border-top: 1px solid #eee;
   margin: 20px 0;
+  width: 100%;
 }
 
 .middle-col button {
-  display: inline-block;
+  
   background-color: rgb(54, 157, 229);
   color: white;
   padding: 7px 18px;
@@ -135,8 +143,8 @@ hr {
   vertical-align: middle;
 }
 
-.fas {
 
+.fas {
   color: #fff;
 
   padding: 5px;
@@ -145,13 +153,6 @@ hr {
 /* Kumar's part ends here */
 
 /* Nazira's Part */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Open Sans", sans-serif;
-  font-size: 15px;
-  
-}
 
 h3 {
   font-weight: 400;
@@ -218,8 +219,7 @@ button:hover {
 }
 
 .btn button {
-  width: 100%;
-
+  width: 50%;
 }
 
 .section3 {
@@ -237,8 +237,5 @@ button:hover {
 
 footer {
   width: 100%;
-  border: 1px solid gray;
-  height: 5em;
-
 
 }
