--- a/style.css
+++ b/style.css
@@ -4,60 +4,102 @@
 
 body {
   margin: 0;
-  padding: 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
 }
 
-header {
-  border: 1px solid gray;
-  height: 4em;
-  position: fixed;
+/* header */
+.navi {
+  background-color: #199DE5;
   width: 100%;
   overflow: hidden;
+  position: fixed;
   top: 0;
-  background-color: rgb(54, 157, 229);
+}
+.seytech, .seytech .fa-home{
+  background-color: #076490!important;
+  font-size: 18px;
+  padding: 15px 16px !important;
+  border: none;
+  color: #fff;
+  text-decoration: none;
 }
 
+a:hover  {
+  color: black;
+  background-color: rgb(230, 230, 224)!important;
+}
+.globe,
+.user,
+.envelope {
+  color: #fff;
+  padding: 30px 24px;
+  width: auto;
+  border: none;
+  background-color: #199DE5;
+  margin-left: -5px;
+}
+.globe:hover {
+  color: black;
+  background-color: rgb(255, 255, 255);
+}
+.user:hover{
+    color: black;
+    background-color: rgb(255, 255, 255);
+}
+.envelope:hover{
+    color: black;
+    background-color: rgb(255, 255, 255);     }
+/* Navigation ends here */
 main {
   display: flex;
-  justify-content: center;
-  height: 50em;
-  margin-top: 80px;
+  align-items: flex-start;
+  margin-top: 70px;
 }
-
-.my-profile {
+.left-side{
+  flex: 2;
+  margin: 10px;
+}
+.container{
+  flex: 4;
+  margin: 10px;
+}
+.right-aside{
+  flex: 1;
+  margin: 10px;
+}
+/* Kanat style starts here */
+.my-profile , .left-middle{
   box-shadow: 3px 3px 15px 2px rgb(180, 193, 206);
-  box-sizing: border-box;
 }
-
 .my-profile p {
   padding-top: 10px;
   text-align: center;
+  margin: 0;
 }
-
 hr {
-  width: 85%;
-  color: rgb(238, 238, 238);
+  width: 95%;
+  margin: auto;
+  border: 0;
+  border-top: 1px solid #eee;
 }
-
 .my-pic img {
   border-radius: 50%;
   width: 120px;
   display: block;
   margin: auto;
+  padding: 15px 0px 20px 0px;
 }
-
 .personal-data i {
   color: grey;
+  padding-right: 20px;
 }
-
 .personal-data {
-  padding: 12px;
+  padding: 20px;
+  padding-top: 0;
   list-style-type: none;
-  line-height: 3px;
+  line-height: 10px;
 }
-
 .my-groups button,
 .my-events button,
 .my-photos button {
@@ -65,13 +107,82 @@ hr {
   color: #fff;
   margin-right: 50px;
   width: 100%;
+  text-align: left;
 }
-
-.left-side {
-  width: 30%;
-  margin: 8px;
-  vertical-align: top;
+.my-groups i,
+.my-events i,
+.my-photos i {
+  padding-right: 20px;
 }
+.my-groups p,
+.my-events p{
+  padding-left: 20px;
+}
+.nature-img{
+  display: inline-flex;
+  flex-wrap: wrap;
+}
+.my-photos img{
+  width:  50%;
+  height: 120px;
+  padding: 10px 20px;
+}
+/* Kanat style ends here */
+/* Chopas styles start here */
+.interests, .hey{
+  box-shadow: 7px 6px 26px -6px rgba(0, 0, 0, 0.75);
+  box-sizing: border-box;
+  padding: 15px;
+  margin-top: 20px;
+}
+.interests ul li{
+  list-style: none;
+  text-align: center;
+  color: white;
+  display: inline-block;
+  padding: 4px 8px;
+  margin: 2px;
+  font-size: 12px;
+}
+ul{
+  padding: 0;
+}
+.hey{
+  background-color: rgb(221, 214, 214);
+  padding: 10px;
+  margin-top: 20px;
+  position: relative;
+}
+.hey i{
+  color: #000;
+}
+.interests li:nth-child(-n+2){
+  background-color: rgb(39, 67, 126);
+}
+.interests li:last-child{
+  background-color: rgb(237, 240, 241);
+}
+.interests li:nth-child(n+8){
+  color: black;
+}
+.interests li:nth-child(n+3):nth-child(-n+7){
+  background-color: rgb(17, 173, 224);
+}
+.interests li:nth-child(n+8):nth-child(-n+9){
+  background-color: rgb(146, 150, 150);
+}
+.interests li:nth-child(10){
+  background-color: rgb(197, 194, 194);
+}
+.close-button{
+  position:absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  background-color: rgb(197, 192, 192);
+  padding: 10px 15px;
+}
+/* Chopas styles end here */
 
 /* Kumar's part starts here */
 
@@ -126,12 +237,7 @@ hr {
   clear: right;
 }
 
-hr {
-  border: 0;
-  border-top: 1px solid #eee;
-  margin: 20px 0;
-  width: 100%;
-}
+
 
 .middle-col button {
   
@@ -235,7 +341,21 @@ button:hover {
 
 /* Nazira's Part ends here */
 
-footer {
+.footer {
+  position: relative;
+  left:0;
+  bottom: 0;
   width: 100%;
-
+  color: white;
+  text-align: left;
+}
+footer .footer-a{
+  background-color: #076490;
+  padding: 16px;
+}
+footer .footer-b,
+footer .footer-b a {
+  background-color: #199de5;
+  padding: 13px;
+  color: white;
 }
