--- a/style.css
+++ b/style.css
@@ -63,9 +63,10 @@ header {
 /* main starts here */
 main {
   display: flex;
-  width: 90%;
+  max-width: 90%;
   margin: auto;
   padding-top: 70px;
+  
 }
 
 .left-side {
@@ -281,7 +282,7 @@ h3 {
   font-weight: 400;
 }
 
-.right-aside {
+.right-side {
   width: 20%;
   margin: 10px;
   text-align: center;
